--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-05 17:06+0000\n"
+"POT-Creation-Date: 2020-11-09 21:08+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -5161,8 +5161,93 @@ msgid "Additionally you will need to make sure the following IP addresses are wh
 msgstr "Помимо этого, Вам потребуется убедиться, что следующие IP-адреса находятся в белом списке."
 
 #, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "                There is an active flow using this flow. It cannot be deleted until it is removed from the\n"
+#| "\n"
+#| "            "
+#| msgid_plural ""
+#| "\n"
+#| "                There are %(counter)s flows using this flow. It cannot be deleted until it is removed from the\n"
+#| "\n"
+#| "            "
+msgid ""
+"\n"
+"        There is an active flow using this channel. It cannot be deleted until it is removed from the\n"
+"\n"
+"      "
+msgid_plural ""
+"\n"
+"        There are %(counter)s flows using this flow. It cannot be deleted until it is removed from the\n"
+"\n"
+"      "
+msgstr[0] ""
+"\n"
+"                Существует активный поток, использующий этот поток. Его нельзя удалить, пока он не будет удален из\n"
+"\n"
+"            "
+msgstr[1] ""
+"\n"
+"                Существуют %(counter)s потоки, использующие этот поток. Его нельзя удалить, пока он не будет удален из\n"
+"\n"
+"            "
+msgstr[2] ""
+"\n"
+"                Существуют %(counter)s потоки, использующие этот поток. Его нельзя удалить, пока он не будет удален из\n"
+"\n"
+"            "
+msgstr[3] ""
+"\n"
+"                Существуют %(counter)s потоки, использующие этот поток. Его нельзя удалить, пока он не будет удален из\n"
+"\n"
+"            "
+
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                flow.\n"
+#| "            "
+#| msgid_plural ""
+#| "\n"
+#| "                flows.\n"
+#| "\n"
+#| "            "
+msgid ""
+"\n"
+"        flow.\n"
+"      "
+msgid_plural ""
+"\n"
+"        flows.\n"
+"      "
+msgstr[0] ""
+"\n"
+"                потока.\n"
+"            "
+msgstr[1] ""
+"\n"
+"                потоков.\n"
+"\n"
+"            "
+msgstr[2] ""
+"\n"
+"                потоков.\n"
+"\n"
+"            "
+msgstr[3] ""
+"\n"
+"                потоков.\n"
+"\n"
+"            "
+
+#, fuzzy, python-format
 #| msgid "You are about to delete <span class='group_name'> %(object)s. </span> No contacts will be deleted but the group itself will be deleted. There is no way to undo this. Are you sure?"
 msgid "You are about to disable bulk sending for <span class='font-normal'> %(object)s. </span> There is no way to undo this. Are you sure?"
+msgstr "Вы собираетесь удалить <span class='group_name'> %(object)s. </span> Контакты не будут удалены, но сама группа будет удалена. Способа отменить это действие нет. Вы уверены?"
+
+#, fuzzy, python-format
+#| msgid "You are about to delete <span class='group_name'> %(object)s. </span> No contacts will be deleted but the group itself will be deleted. There is no way to undo this. Are you sure?"
+msgid "You are about to delete the channel <span class='font-normal'> %(object)s. </span> There is no way to undo this. Are you sure?"
 msgstr "Вы собираетесь удалить <span class='group_name'> %(object)s. </span> Контакты не будут удалены, но сама группа будет удалена. Способа отменить это действие нет. Вы уверены?"
 
 #, fuzzy
@@ -7538,44 +7623,6 @@ msgstr[2] ""
 msgstr[3] ""
 "\n"
 "                Существуют %(counter)s потоки, использующие этот поток. Его нельзя удалить, пока он не будет удален из\n"
-"\n"
-"            "
-
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "                flow.\n"
-#| "            "
-#| msgid_plural ""
-#| "\n"
-#| "                flows.\n"
-#| "\n"
-#| "            "
-msgid ""
-"\n"
-"        flow.\n"
-"      "
-msgid_plural ""
-"\n"
-"        flows.\n"
-"      "
-msgstr[0] ""
-"\n"
-"                потока.\n"
-"            "
-msgstr[1] ""
-"\n"
-"                потоков.\n"
-"\n"
-"            "
-msgstr[2] ""
-"\n"
-"                потоков.\n"
-"\n"
-"            "
-msgstr[3] ""
-"\n"
-"                потоков.\n"
 "\n"
 "            "
 
